# lipsync-master

./: .gitignore  CMakeLists.txt  README.md  build.sh  onnx_convert.py  test_java.sh  test_multi.sh
TEST/: build.sh  concat_video.cpp  test_detect_landmark_gpu.cpp  test_gpu_preprocess.cpp  test_pipnet_gpu.cpp  test_resize_compare  test_resize_compare.cpp  test_resize_compare.sh  test_resize_unscale.cpp  test_scrfd_gpu.cpp
com/hexin/ai/jni/: BatchTalkingFace.java  TalkingFace.java  TalkingFaceMultiTest.java
include/debug/: util_debug.h
src/: .video_palindrome.cpp.swp  audio_feat_extract.cpp  com_hexin_ai_jni_TalkingFace.cpp  com_hexin_ai_jni_TalkingFace.h  face_detect.cpp  ffmpeg_config.cpp  ffmpeg_config.h  gpu_decoder.cpp  gpu_decoder.h  init.cpp  process.cpp  producer_consumer.cpp  render.cpp  shutup.cpp  talkingface.h  util.cpp  video_palindrome.cpp  video_palindrome.h
src/audio/: constants.h  smalltool.cpp  smalltool.h  wavdata.h  wavhelper.cpp  wavhelper.h
trt_function/: models.h  utils.h
trt_function/core/: error_code.cpp  error_code.h  trt_handler.cpp  trt_handler.h  trt_utils.cpp  trt_utils.h
trt_function/src/: gcfsr.cpp  gcfsr.h  gpu_kernels.cu  gpu_kernels.cuh  gpu_preprocess.cpp  gpu_preprocess.h  hubert.cpp  hubert.h  pipnet.cpp  pipnet.h  scrfd.cpp  scrfd.h  sixdrep.cpp  sixdrep.h  wav2lip.cpp  wav2lip.h
unitTest/: ex_cmd.sh  facedet.cpp  test_2.5d_mt.cpp  test_facedet.cpp  test_facedet_mt.cpp  test_gpu_decoder.cpp  test_process.cpp  test_read.cpp  test_render.cpp  test_shutup.cpp
